--- a/app/src/main/res/layout/activity_commercial_house_trade.xml
+++ b/app/src/main/res/layout/activity_commercial_house_trade.xml
@@ -45,7 +45,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_edit_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                    android:visibility='@{editable.isEditable ?  View.GONE: View.VISIBLE}'
                     app:cb_color="@color/colorPrimary" />
 
                 <at.markushi.ui.CircleButton
@@ -53,7 +53,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_delete_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                    android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
                     app:cb_color="@color/colorPrimary" />
 
                 <at.markushi.ui.CircleButton
@@ -61,7 +61,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_check_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.VISIBLE: View.GONE}'
+                    android:visibility='@{editable.idEditable ?  View.VISIBLE: View.GONE}'
                     app:cb_color="@color/colorPrimary" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
