--- a/app/src/main/res/layout/activity_house_rent.xml
+++ b/app/src/main/res/layout/activity_house_rent.xml
@@ -43,7 +43,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_edit_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -51,7 +51,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_delete_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -59,7 +59,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_check_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.VISIBLE: View.GONE}'
+                        android:visibility='@{editable.idEditable ?  View.VISIBLE: View.GONE}'
                         app:cb_color="@color/colorPrimary" />
                 </LinearLayout>
 
