--- a/app/src/main/res/layout/activity_house_sell.xml
+++ b/app/src/main/res/layout/activity_house_sell.xml
@@ -44,7 +44,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_edit_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -52,7 +52,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_delete_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -60,7 +60,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_check_white_24dp"
-                        android:visibility='@{editable.isEditable=="true" ?  View.VISIBLE: View.GONE}'
+                        android:visibility='@{editable.idEditable ?  View.VISIBLE: View.GONE}'
                         app:cb_color="@color/colorPrimary" />
                 </LinearLayout>
 
