--- a/app/src/main/res/layout/child_base.xml
+++ b/app/src/main/res/layout/child_base.xml
@@ -49,7 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:maxLines="1"
                             android:id="@+id/et_reasearcher"
                             android:layout_width=   "match_parent"
@@ -62,7 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:maxLines="1"
                             android:id="@+id/et_reasearch_time"
                             android:layout_width="match_parent"
@@ -75,7 +75,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:id="@+id/et_detail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
