--- a/app/src/main/res/layout/child_building_situation.xml
+++ b/app/src/main/res/layout/child_building_situation.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={sellRentModel.buildingNum}"
                         android:id="@+id/et_building_num"
                         android:inputType="number"
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={sellRentModel.buildingName}"
                         android:id="@+id/et_building_name"
                         android:inputType="text"
@@ -124,7 +124,7 @@
                     android:hint="房屋总建筑面积"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:inputType="text"
                         android:text='@{"" + sellRentModel.buildingArea}'
                         android:id="@+id/et_building_area"
@@ -137,7 +137,7 @@
                     android:hint="总占地面积"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + sellRentModel.coverArea}'
                         android:id="@+id/et_cover_area"
                         android:inputType="text"
@@ -150,7 +150,7 @@
                     android:hint="楼层数"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + sellRentModel.floorNum}'
                         android:id="@+id/et_floor_num"
                         android:inputType="number"
@@ -163,7 +163,7 @@
                     android:hint="已使用年限"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + sellRentModel.yearUsed}'
                         android:id="@+id/et_year_used"
                         android:inputType="number"
