--- a/app/src/main/res/layout/child_chs_trade_situation.xml
+++ b/app/src/main/res/layout/child_chs_trade_situation.xml
@@ -57,7 +57,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:text="@={tradeModel.tradeIn}"
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:id="@+id/et_trade_in"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text="@={tradeModel.tradeOut}"
                             android:id="@+id/et_trade_out"
                             android:inputType="text"
@@ -97,7 +97,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                                android:enabled='@{editable.idEditable ?  true: false}'
                                 android:text='@{"" + tradeModel.loanYear}'
                                 android:id="@+id/et_load_year"
                                 android:inputType="text"
@@ -111,7 +111,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text="@={tradeModel.tradeLevel}"
                             android:id="@+id/et_trade_level"
                             android:inputType="text"
@@ -124,7 +124,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text="@={tradeModel.tradeTime}"
                             android:id="@+id/et_trade_time"
                             android:inputType="date"
@@ -139,7 +139,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text="@={tradeModel.useage}"
                             android:id="@+id/et_usage"
                             android:inputType="text"
@@ -152,7 +152,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text="@={tradeModel.plotRatePlaned}"
                             android:id="@+id/et_plot_rate_planed"
                             android:inputType="text"
@@ -167,7 +167,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:text='@{"" + tradeModel.area}'
                             android:id="@+id/et_area"
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -181,7 +181,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:text='@{"" + tradeModel.price}'
                             android:id="@+id/et_price"
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -194,7 +194,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:text='@{"" + tradeModel.shareLandArea}'
                             android:id="@+id/et_share_land_area"
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:inputType="text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
