--- a/app/src/main/res/layout/child_extra.xml
+++ b/app/src/main/res/layout/child_extra.xml
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:maxLines="1"
                         android:id="@+id/et_reasearcher"
                         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:maxLines="1"
                         android:text="@={extraModel.researcherTime}"
                         android:id="@+id/et_reasearch_time"
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={extraModel.detail}"
                         android:id="@+id/et_tail"
                         android:layout_width="match_parent"
