--- a/app/src/main/res/layout/child_land_situation.xml
+++ b/app/src/main/res/layout/child_land_situation.xml
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:id="@+id/et_land_location"
                         android:hint="宗地位置"
                         android:text="@={sellRentModel.landLoacation}"
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:id="@+id/et_land_range"
                         android:hint="土地四至"
                         android:text="@={sellRentModel.landRange}"
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:id="@+id/et_nearby_street_name"
                         android:hint="所临道路名称"
                         android:text="@={sellRentModel.nearbyStreetName}"
@@ -286,7 +286,7 @@
                     android:hint="使用权取得时间"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={sellRentModel.authorizedTime}"
                         android:id="@+id/et_authorized_time"
                         android:clickable="true"
@@ -301,7 +301,7 @@
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
                         android:text="@={sellRentModel.landServiceableLife}"
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:id="@+id/et_land_serviceable_life"
                         android:entries="@array/array_usage"
                         android:layout_width="match_parent"
