--- a/app/src/main/res/layout/child_rent_4.xml
+++ b/app/src/main/res/layout/child_rent_4.xml
@@ -51,7 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.rentOut}"
                         android:id="@+id/et_rent_out"
                         android:layout_width="match_parent"
@@ -64,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.rentIn}"
                         android:id="@+id/et_rent_in"
                         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.rentType}"
                         android:id="@+id/et_rent_type"
                         android:layout_width="match_parent"
@@ -90,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.appointTime}"
                         android:clickable="true"
                         android:focusableInTouchMode="false"
@@ -105,7 +105,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.rentDeadline}"
                         android:id="@+id/et_rent_deadline"
                         android:inputType="text"
@@ -118,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.useage}"
                         android:id="@+id/et_use"
                         android:inputType="text"
@@ -131,7 +131,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={rentModel.rentLayer}"
                         android:id="@+id/et_rent_layer"
                         android:inputType="text"
@@ -144,7 +144,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + rentModel.buildingArea}'
                         android:id="@+id/et_rent_building_area"
                         android:inputType="text"
@@ -158,7 +158,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + rentModel.tradeArea}'
                         android:id="@+id/et_trade_area"
                         android:inputType="text"
@@ -171,7 +171,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + rentModel.shareLandArea}'
                         android:id="@+id/et_share_land_area"
                         android:inputType="text"
@@ -184,7 +184,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text='@{"" + rentModel.feeOfMoney}'
                         android:id="@+id/et_fee_of_month"
                         android:inputType="text"
