--- a/app/src/main/res/layout/child_trade_1.xml
+++ b/app/src/main/res/layout/child_trade_1.xml
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
                         android:text="@={tradeModel.tradeIn}"
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:id="@+id/et_trade_in"
                         android:inputType="text"
                         android:layout_width="match_parent"
@@ -64,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={tradeModel.tradeOut}"
                         android:id="@+id/et_trade_out"
                         android:inputType="text"
@@ -92,7 +92,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                            android:enabled='@{editable.idEditable ?  true: false}'
                             android:text='@{"" + tradeModel.loanYear}'
                             android:id="@+id/et_load_year"
                             android:inputType="text"
@@ -106,7 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={tradeModel.tradeLevel}"
                         android:id="@+id/et_trade_level"
                         android:inputType="text"
@@ -119,7 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={tradeModel.tradeTime}"
                         android:id="@+id/et_trade_time"
                         android:inputType="date"
@@ -134,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={tradeModel.useage}"
                         android:id="@+id/et_usage"
                         android:inputType="text"
@@ -147,7 +147,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:text="@={tradeModel.plotRatePlaned}"
                         android:id="@+id/et_plot_rate_planed"
                         android:inputType="text"
@@ -162,7 +162,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.area}'
                         android:id="@+id/et_area"
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -176,7 +176,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.price}'
                         android:id="@+id/et_price"
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -189,7 +189,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.shareLandArea}'
                         android:id="@+id/et_share_land_area"
-                        android:enabled='@{editable.isEditable=="true" ?  true: false}'
+                        android:enabled='@{editable.idEditable ?  true: false}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
