--- a/app/src/main/res/layout/activity_commercial_house_sell.xml
+++ b/app/src/main/res/layout/activity_commercial_house_sell.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable" />
+            type="Boolean" />
     </data>
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -42,7 +42,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_edit_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                    android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
                     app:cb_color="@color/colorPrimary" />
 
                 <at.markushi.ui.CircleButton
@@ -50,7 +50,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_delete_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.GONE: View.VISIBLE}'
+                    android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
                     app:cb_color="@color/colorPrimary" />
 
                 <at.markushi.ui.CircleButton
@@ -58,7 +58,7 @@
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
                     android:src="@drawable/ic_check_white_24dp"
-                    android:visibility='@{editable.isEditable=="true" ?  View.VISIBLE: View.GONE}'
+                    android:visibility='@{editable ?  View.VISIBLE: View.GONE}'
                     app:cb_color="@color/colorPrimary" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
