--- a/app/src/main/res/layout/activity_house_sell.xml
+++ b/app/src/main/res/layout/activity_house_sell.xml
@@ -11,7 +11,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.SellRentModel"/>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -44,7 +44,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_edit_white_24dp"
-                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -52,7 +52,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_delete_white_24dp"
-                        android:visibility='@{editable.idEditable ?  View.GONE: View.VISIBLE}'
+                        android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
                         app:cb_color="@color/colorPrimary" />
 
                     <at.markushi.ui.CircleButton
@@ -60,7 +60,7 @@
                         android:layout_width="?actionBarSize"
                         android:layout_height="?actionBarSize"
                         android:src="@drawable/ic_check_white_24dp"
-                        android:visibility='@{editable.idEditable ?  View.VISIBLE: View.GONE}'
+                        android:visibility='@{editable ?  View.VISIBLE: View.GONE}'
                         app:cb_color="@color/colorPrimary" />
                 </LinearLayout>
 
