--- a/app/src/main/res/layout/activity_tab_pager.xml
+++ b/app/src/main/res/layout/activity_tab_pager.xml
@@ -44,12 +44,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_below="@id/tab_layout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    <com.amap.api.maps2d.MapView
-        android:id="@+id/map"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </android.support.design.widget.CoordinatorLayout>
