--- a/app/src/main/res/layout/child_base.xml
+++ b/app/src/main/res/layout/child_base.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <android.support.v7.widget.CardView
@@ -49,7 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:maxLines="1"
                             android:id="@+id/et_reasearcher"
                             android:layout_width=   "match_parent"
@@ -62,7 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:maxLines="1"
                             android:id="@+id/et_reasearch_time"
                             android:layout_width="match_parent"
@@ -75,7 +75,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:id="@+id/et_detail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
