--- a/app/src/main/res/layout/child_chs_land_situation.xml
+++ b/app/src/main/res/layout/child_chs_land_situation.xml
@@ -11,7 +11,7 @@
             type="SellRentModel"/>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <android.support.v7.widget.CardView
@@ -54,7 +54,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:id="@+id/et_land_location"
                             android:hint="宗地位置"
                             android:text="@={sellRentModel.landLoacation}"
@@ -66,7 +66,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:id="@+id/et_land_range"
                             android:hint="土地四至"
                             android:text="@={sellRentModel.landRange}"
@@ -78,7 +78,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:id="@+id/et_nearby_street_name"
                             android:hint="所临道路名称"
                             android:text="@={sellRentModel.nearbyStreetName}"
@@ -291,7 +291,7 @@
                         android:hint="使用权取得时间"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:text="@={sellRentModel.authorizedTime}"
                             android:id="@+id/et_authorized_time"
                             android:clickable="true"
@@ -306,7 +306,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:text="@={sellRentModel.landServiceableLife}"
-                            android:enabled='@{editable.idEditable ?  true: false}'
+                            android:enabled='@{editable}'
                             android:id="@+id/et_land_serviceable_life"
                             android:entries="@array/array_usage"
                             android:layout_width="match_parent"
