--- a/app/src/main/res/layout/child_extra.xml
+++ b/app/src/main/res/layout/child_extra.xml
@@ -9,7 +9,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.SellRentModel"/>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <LinearLayout
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:maxLines="1"
                         android:id="@+id/et_reasearcher"
                         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:maxLines="1"
                         android:text="@={extraModel.researcherTime}"
                         android:id="@+id/et_reasearch_time"
@@ -77,7 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={extraModel.detail}"
                         android:id="@+id/et_tail"
                         android:layout_width="match_parent"
