--- a/app/src/main/res/layout/child_rent_2.xml
+++ b/app/src/main/res/layout/child_rent_2.xml
@@ -9,7 +9,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.RentInfo2Model"/>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <LinearLayout
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.rentOut}"
                         android:id="@+id/et_rent_out"
                         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.rentIn}"
                         android:id="@+id/et_rent_in"
                         android:layout_width="match_parent"
@@ -76,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.rentType}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.appointTime}"
                         android:id="@+id/et_appoint_time"
                         android:clickable="true"
@@ -103,7 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:id="@+id/et_rent_deadline"
                         android:inputType="date"
                         android:text="@={rentModel.rentDeadline}"
@@ -116,7 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.useage}"
                         android:id="@+id/et_use"
                         android:inputType="text"
@@ -129,7 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text="@={rentModel.rentLayer}"
                         android:id="@+id/et_rent_layer"
                         android:inputType="text"
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text='@{"" + rentModel.buildingArea}'
                         android:id="@+id/et_rent_building_area"
                         android:inputType="text"
@@ -156,7 +156,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text='@{"" + rentModel.tradeArea}'
                         android:id="@+id/trade_area"
                         android:inputType="text"
@@ -169,7 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text='@{"" + rentModel.shareLandArea}'
                         android:id="@+id/et_share_land_area"
                         android:inputType="text"
@@ -182,7 +182,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:text='@{"" + rentModel.feeOfYear}'
                         android:id="@+id/et_fee_of_year"
                         android:inputType="text"
