--- a/app/src/main/res/layout/child_trade_3.xml
+++ b/app/src/main/res/layout/child_trade_3.xml
@@ -9,7 +9,7 @@
             type="org.chengjian.java.feidian.collectdata.beans.TradeInfo3Model"/>
         <variable
             name="editable"
-            type="org.chengjian.java.feidian.collectdata.beans.Editable"/>
+            type="Boolean"/>
     </data>
 
     <LinearLayout
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
                         android:text="@={tradeModel.tradeIn}"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:id="@+id/et_trade_in"
                         android:inputType="text"
                         android:layout_width="match_parent"
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
                         android:text="@={tradeModel.tradeOut}"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:id="@+id/et_trade_out"
                         android:inputType="text"
                         android:layout_width="match_parent"
@@ -79,7 +79,7 @@
                         android:text="@={tradeModel.tradeLevel}"
                         android:id="@+id/et_trade_type"
                         android:inputType="text"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
@@ -93,7 +93,7 @@
                         android:id="@+id/et_trade_time"
                         android:clickable="true"
                         android:focusableInTouchMode="false"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:inputType="date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -108,7 +108,7 @@
                         android:id="@+id/et_trade_level"
                         android:inputType="text"
                         android:layout_width="match_parent"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -120,7 +120,7 @@
                         android:text='@{"" + tradeModel.area}'
                         android:id="@+id/et_area"
                         android:inputType="text"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </android.support.design.widget.TextInputLayout>
@@ -132,7 +132,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.shareLandArea}'
                         android:id="@+id/et_share_land_area"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -145,7 +145,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text="@={tradeModel.usageBefore}"
                         android:id="@+id/et_usage_before"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -158,7 +158,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text="@={tradeModel.usageAfter}"
                         android:id="@+id/et_usage_after"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -171,7 +171,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.tax}'
                         android:id="@+id/et_tax"
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:inputType="text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -183,7 +183,7 @@
                     android:layout_height="wrap_content">
                     <android.support.design.widget.TextInputEditText
                         android:text='@{"" + tradeModel.price}'
-                        android:enabled='@{editable.idEditable ?  true: false}'
+                        android:enabled='@{editable}'
                         android:id="@+id/et_price"
                         android:inputType="text"
                         android:layout_width="match_parent"
