--- a/app/src/main/res/layout/activity_commercial_house_trade.xml
+++ b/app/src/main/res/layout/activity_commercial_house_trade.xml
@@ -79,6 +79,8 @@
 
                 <include
                     android:id="@+id/child_base"
+                    bind:editable="@={editable}"
+                    bind:citySellRent="@={citySellRent}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -88,6 +90,9 @@
                     android:layout_height="wrap_content"/>
                 <include
                     android:id="@+id/child_chs_land_situation"
+                    bind:editable="@={editable}"
+                    bind:citySellRent="@={citySellRent}"
+                    bind:commercialHouseTradeModel="@={commercialHouseTradeModel}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -97,6 +102,9 @@
                     android:layout_height="wrap_content"/>
                 <include
                     android:id="@+id/child_chs_building_situation"
+                    bind:editable="@={editable}"
+                    bind:citySellRent="@={citySellRent}"
+                    bind:commercialHouseTradeModel="@={commercialHouseTradeModel}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -106,6 +114,8 @@
                     android:layout_height="wrap_content"/>
                 <include
                     android:id="@+id/child_chs_trade_situation"
+                    bind:editable="@={editable}"
+                    bind:commercialHouseTradeModel="@={commercialHouseTradeModel}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
