--- a/app/src/main/res/layout/child_chs_building_situation.xml
+++ b/app/src/main/res/layout/child_chs_building_situation.xml
@@ -6,11 +6,14 @@
 
     <data>
         <variable
-            name="sellRentModel"
-            type="org.chengjian.java.feidian.collectdata.beans.SellRentModel"/>
+            name="commercialHouseTradeModel"
+            type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
         <variable
             name="editable"
             type="Boolean"/>
+        <variable
+            name="citySellRent"
+            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
     </data>
     <android.support.v7.widget.CardView
         app:cardCornerRadius="10dp"
@@ -50,45 +53,24 @@
                     android:layout_height="wrap_content">
 
                     <android.support.design.widget.TextInputLayout
-                        android:hint="楼宇编号"
+                        android:hint="房屋位置"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={sellRentModel.buildingNum}"
+                            android:text="@={citySellRent.houseLocation}"
                             android:id="@+id/et_building_num"
                             android:inputType="number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:hint="楼宇名称"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <android.support.design.widget.TextInputEditText
-                            android:enabled='@{editable}'
-                            android:text="@={sellRentModel.buildingName}"
-                            android:id="@+id/et_building_name"
-                            android:inputType="text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </android.support.design.widget.TextInputLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:baselineAligned="false"
                         android:orientation="horizontal">
-                        <fr.ganfra.materialspinner.MaterialSpinner
-                            android:layout_weight="1"
-                            app:ms_hintTextSize="18sp"
-                            app:ms_hint="装修标准"
-                            android:id="@+id/sp_decoration_type"
-                            android:entries="@array/array_decoration_type"
-                            android:layout_marginEnd="4dp"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"/>
                         <fr.ganfra.materialspinner.MaterialSpinner
                             app:ms_hint="房屋结构"
                             android:layout_marginStart="4dp"
@@ -98,13 +80,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"/>
-                    </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:baselineAligned="false"
-                        android:orientation="horizontal">
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:layout_weight="1"
                             app:ms_hint="质量等级"
@@ -112,27 +88,18 @@
                             android:id="@+id/sp_quality_level"
                             android:layout_marginEnd="4dp"
                             android:entries="@array/array_quality_level"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                        <fr.ganfra.materialspinner.MaterialSpinner
-                            android:layout_weight="1"
-                            app:ms_hint="采光通风状况"
-                            app:ms_hintTextSize="18sp"
-                            android:id="@+id/sp_light_air_type"
-                            android:layout_marginStart="4dp"
-                            android:entries="@array/array_light_air_type"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:hint="房屋总建筑面积"
+                        android:hint="建筑面积"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:inputType="text"
-                            android:text='@{"" + sellRentModel.buildingArea}'
+                            android:inputType="number"
+                            android:text='@={"" + citySellRent.buildingArea}'
                             android:id="@+id/et_building_area"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
@@ -140,13 +107,13 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:hint="总占地面积"
+                        android:hint="房屋建筑面积"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@{"" + sellRentModel.coverArea}'
-                            android:id="@+id/et_cover_area"
-                            android:inputType="text"
+                            android:text='@={"" + citySellRent.houseArea}'
+                            android:id="@+id/et_house_area"
+                            android:inputType="number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
@@ -157,7 +124,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@{"" + sellRentModel.floorNum}'
+                            android:text='@={"" + commercialHouseTradeModel.floorNum}'
                             android:id="@+id/et_floor_num"
                             android:inputType="number"
                             android:layout_width="match_parent"
@@ -166,12 +133,120 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:hint="已使用年限"
+                        android:hint="房屋标准造价"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text='@{"" + sellRentModel.yearUsed}'
-                            android:id="@+id/et_year_used"
+                            android:text='@={"" + commercialHouseTradeModel.houseStandardPrice}'
+                            android:id="@+id/et_house_standard_price"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="建筑工程造价"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.buildingProjectPrice}'
+                            android:id="@+id/et_building_project_price"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="小区公共设施配套费"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.serviceFee}'
+                            android:id="@+id/et_service_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="其它建房直接费用"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.otherDirectFee}'
+                            android:id="@+id/et_other_direct_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="管理费和利润"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.manageFeeAndProfit}'
+                            android:id="@+id/et_manage_fee_and_profit"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="不可预见费"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.unPredictedFee}'
+                            android:id="@+id/et_unpredicted_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="土地征收补偿费"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.landCompensateFee}'
+                            android:id="@+id/et_land_compensate_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="代收费用"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.agentFee}'
+                            android:id="@+id/et_agent_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="城市大配套费用"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.cityBigSuiteFee}'
+                            android:id="@+id/et_city_big_suit_fee"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="其它费用"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.otherFee}'
+                            android:id="@+id/et_other_fee"
                             android:inputType="number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
