--- a/app/src/main/res/layout/child_chs_land_situation.xml
+++ b/app/src/main/res/layout/child_chs_land_situation.xml
@@ -4,11 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <import type="org.chengjian.java.feidian.collectdata.beans.SellRentModel"/>
         <import type="android.view.View"/>
         <variable
-            name="sellRentModel"
-            type="SellRentModel"/>
+            name="commercialHouseTradeModel"
+            type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
+        <variable
+            name="citySellRent"
+            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent"/>
         <variable
             name="editable"
             type="Boolean"/>
@@ -57,7 +59,7 @@
                             android:enabled='@{editable}'
                             android:id="@+id/et_land_location"
                             android:hint="宗地位置"
-                            android:text="@={sellRentModel.landLoacation}"
+                            android:text="@={citySellRent.landLoacation}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </android.support.design.widget.TextInputLayout>
@@ -69,7 +71,7 @@
                             android:enabled='@{editable}'
                             android:id="@+id/et_land_range"
                             android:hint="土地四至"
-                            android:text="@={sellRentModel.landRange}"
+                            android:text="@={citySellRent.landRange}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </android.support.design.widget.TextInputLayout>
@@ -81,7 +83,7 @@
                             android:enabled='@{editable}'
                             android:id="@+id/et_nearby_street_name"
                             android:hint="所临道路名称"
-                            android:text="@={sellRentModel.nearbyStreetName}"
+                            android:text="@={citySellRent.nearbyStreetName}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     </android.support.design.widget.TextInputLayout>
@@ -123,7 +125,7 @@
                                 android:hint="宗地长度"
                                 android:id="@+id/et_land_length"
                                 android:layout_width="match_parent"
-                                android:text="@={sellRentModel.landLength}"
+                                android:text='@={citySellRent.landLength}'
                                 android:layout_height="wrap_content"
                                 android:inputType="text">
                             </android.support.design.widget.TextInputEditText>
@@ -134,8 +136,8 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:hint="宗地宽度"
-                                android:text="@={sellRentModel.landDepth}"
-                                android:id="@+id/et_land_depth"
+                                android:text='@={citySellRent.landWidth}'
+                                android:id="@+id/et_land_width"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
                         </android.support.design.widget.TextInputLayout>
@@ -202,7 +204,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{""+sellRentModel.distToCornor}'
+                                android:text='@={""+citySellRent.distToCornor}'
                                 android:id="@+id/et_dist_to_cornor"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -213,7 +215,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{"" + sellRentModel.buildingPlotRate}'
+                                android:text='@={"" + citySellRent.buildingPlotRate}'
                                 android:id="@+id/et_building_plot_rate"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -231,7 +233,7 @@
                             android:hint="临街宽度(m)"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{"" + sellRentModel.widthToStreet}'
+                                android:text='@{"" + citySellRent.widthToStreet}'
                                 android:id="@+id/et_width_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -242,7 +244,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
-                                android:text='@{"" + sellRentModel.depthToStreet}'
+                                android:text='@{"" + citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
@@ -292,7 +294,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={sellRentModel.authorizedTime}"
+                            android:text="@={citySellRent.authorizedTime}"
                             android:id="@+id/et_authorized_time"
                             android:clickable="true"
                             android:focusableInTouchMode="false"
@@ -305,7 +307,7 @@
                         android:hint="土地使用年限"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text="@={sellRentModel.landServiceableLife}"
+                            android:text='@={""+citySellRent.landServiceableLife}'
                             android:enabled='@{editable}'
                             android:id="@+id/et_land_serviceable_life"
                             android:entries="@array/array_usage"
