--- a/app/src/main/res/layout/child_chs_trade_situation.xml
+++ b/app/src/main/res/layout/child_chs_trade_situation.xml
@@ -6,11 +6,12 @@
     xmlns:bind="http://schemas.android.com/tools">
     <data>
         <variable
-            name="tradeModel"
-            type="org.chengjian.java.feidian.collectdata.beans.TradeInfo1Model"/>
-        <variable
             name="editable"
             type="Boolean"/>
+
+        <variable
+            name="commercialHouseTradeModel"
+            type="org.chengjian.java.feidian.collectdata.beans.CommercialHouseTradeModel" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -42,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:el_duration="500"
-                app:el_expanded="false">
+                app:el_expanded="true">
 
                 <LinearLayout
                     android:layout_marginStart="8dp"
@@ -56,7 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text="@={tradeModel.tradeIn}"
+                            android:text="@={commercialHouseTradeModel.tradeIn}"
                             android:enabled='@{editable}'
                             android:id="@+id/et_trade_in"
                             android:inputType="text"
@@ -65,12 +66,12 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
-                        android:hint="卖方(开发商)"
+                        android:hint="商品房开发单位"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={tradeModel.tradeOut}"
+                            android:text="@={commercialHouseTradeModel.developer}"
                             android:id="@+id/et_trade_out"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -98,7 +99,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:enabled='@{editable}'
-                                android:text='@{"" + tradeModel.loanYear}'
+                                android:text='@{commercialHouseTradeModel.loanYear}'
                                 android:id="@+id/et_load_year"
                                 android:inputType="text"
                                 android:layout_width="match_parent"
@@ -112,7 +113,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={tradeModel.tradeLevel}"
+                            android:text="@={commercialHouseTradeModel.tradeLevel}"
                             android:id="@+id/et_trade_level"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -125,7 +126,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={tradeModel.tradeTime}"
+                            android:text="@={commercialHouseTradeModel.tradeTime}"
                             android:id="@+id/et_trade_time"
                             android:inputType="date"
                             android:clickable="true"
@@ -140,7 +141,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={tradeModel.useage}"
+                            android:text="@={commercialHouseTradeModel.useage}"
                             android:id="@+id/et_usage"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -153,7 +154,7 @@
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
                             android:enabled='@{editable}'
-                            android:text="@={tradeModel.plotRatePlaned}"
+                            android:text='@={""+commercialHouseTradeModel.plotRatePlaned}'
                             android:id="@+id/et_plot_rate_planed"
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -161,12 +162,12 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
-                        android:hint="卖建面积"
+                        android:hint="建筑面积"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text='@{"" + tradeModel.area}'
-                            android:id="@+id/et_area"
+                            android:text='@{"" + commercialHouseTradeModel.buildingDensity}'
+                            android:id="@+id/et_building_density"
                             android:enabled='@{editable}'
                             android:inputType="text"
                             android:layout_width="match_parent"
@@ -175,30 +176,103 @@
 
                     <android.support.design.widget.TextInputLayout
 
+                        android:hint="整栋商品楼总售价"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:text='@{"" + commercialHouseTradeModel.wholeBuildingPrice}'
+                            android:id="@+id/et_whole_building_price"
+                            android:enabled='@{editable}'
+                            android:inputType="text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:hint="整栋商品楼总造价"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:text='@{"" + commercialHouseTradeModel.wholeBuildingFee}'
+                            android:id="@+id/et_whole_building_fee"
+                            android:enabled='@{editable}'
+                            android:inputType="text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="占用资金应付利息"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.interest}'
+                            android:id="@+id/et_interest"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="公司开发利润"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.profitOfDeveloper}'
+                            android:id="@+id/et_profit_of_developer"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
                         android:hint="房屋交易总价格"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <android.support.design.widget.TextInputEditText
-                            android:text='@{"" + tradeModel.price}'
-                            android:id="@+id/et_price"
                             android:enabled='@{editable}'
-                            android:inputType="text"
+                            android:text='@={""+commercialHouseTradeModel.price}'
+                            android:id="@+id/et_price"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="房屋交易税费"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.tax}'
+                            android:id="@+id/et_tax"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="单位面积地价"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.landPricePerSquare}'
+                            android:id="@+id/et_land_price_per_square"
+                            android:inputType="number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:hint="分摊土地面积"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:enabled='@{editable}'
+                            android:text='@={""+commercialHouseTradeModel.shareLandArea}'
+                            android:id="@+id/et_share_land_area"
+                            android:inputType="number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:hint="分摊土地面积"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <android.support.design.widget.TextInputEditText
-                            android:text='@{"" + tradeModel.shareLandArea}'
-                            android:id="@+id/et_share_land_area"
-                            android:enabled='@{editable}'
-                            android:inputType="text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
 
