--- a/app/src/main/res/layout/child_base.xml
+++ b/app/src/main/res/layout/child_base.xml
@@ -56,7 +56,7 @@
                             android:text="@={citySellRent.researcher}"
                             android:maxLines="1"
                             android:id="@+id/et_reasearcher"
-                            android:layout_width=   "match_parent"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text" />
                     </android.support.design.widget.TextInputLayout>
@@ -88,6 +88,55 @@
                             android:inputType="text" />
                     </android.support.design.widget.TextInputLayout>
 
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/locate"
+                        android:clickable="true"
+                        android:layout_margin="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="true">
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:layout_margin="4dp"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:textSize="18sp"
+                                    android:text="经度："
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
+                                <TextView
+                                    android:id="@+id/longitude"
+                                    android:textSize="18sp"
+                                    android:text='@={""+citySellRent.longitude}'
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_margin="4dp"
+                                android:orientation="horizontal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:text="纬度："
+                                    android:textSize="18sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
+                                <TextView
+                                    android:textSize="18sp"
+                                    android:id="@+id/latitude"
+                                    android:text='@={""+citySellRent.latitude}'
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
 
                 </LinearLayout>
