--- a/app/src/main/res/layout/activity_shop_rent.xml
+++ b/app/src/main/res/layout/activity_shop_rent.xml
@@ -1,116 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
-            name="sellRentModel"
-            type="org.chengjian.java.feidian.collectdata.beans.SellRentModel"/>
+            name="citySellRent"
+            type="org.chengjian.java.feidian.collectdata.beans.CitySellRent" />
+
+        <variable
+            name="model"
+            type="org.chengjian.java.feidian.collectdata.beans.ShopRentModel" />
         <variable
             name="editable"
             type="Boolean"/>
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@android:color/white"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#d7dbe6"
+        android:orientation="vertical">
 
-        <android.support.design.widget.AppBarLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:layout_height="?actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:title="房屋出租租金调查表"
+            app:titleTextColor="@color/colorTitle">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="?actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:title="商铺出租调查"
-                app:titleTextColor="@color/colorTitle" >
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                android:layout_gravity="end">
+
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/button_edit"
+                    android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize"
-                    android:layout_gravity="end">
+                    android:src="@drawable/ic_edit_white_24dp"
+                    android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
+                    app:cb_color="@color/colorPrimary" />
 
-                    <at.markushi.ui.CircleButton
-                        android:id="@+id/button_edit"
-                        android:layout_width="?actionBarSize"
-                        android:layout_height="?actionBarSize"
-                        android:src="@drawable/ic_edit_white_24dp"
-                        android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
-                        app:cb_color="@color/colorPrimary" />
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/button_delete"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="?actionBarSize"
+                    android:src="@drawable/ic_delete_white_24dp"
+                    android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
+                    app:cb_color="@color/colorPrimary" />
 
-                    <at.markushi.ui.CircleButton
-                        android:id="@+id/button_delete"
-                        android:layout_width="?actionBarSize"
-                        android:layout_height="?actionBarSize"
-                        android:src="@drawable/ic_delete_white_24dp"
-                        android:visibility='@{editable ?  View.GONE: View.VISIBLE}'
-                        app:cb_color="@color/colorPrimary" />
-
-                    <at.markushi.ui.CircleButton
-                        android:id="@+id/button_save"
-                        android:layout_width="?actionBarSize"
-                        android:layout_height="?actionBarSize"
-                        android:src="@drawable/ic_check_white_24dp"
-                        android:visibility='@{editable ?  View.VISIBLE: View.GONE}'
-                        app:cb_color="@color/colorPrimary" />
-                </LinearLayout>
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/button_save"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="?actionBarSize"
+                    android:src="@drawable/ic_check_white_24dp"
+                    android:visibility='@{editable ?  View.VISIBLE: View.GONE}'
+                    app:cb_color="@color/colorPrimary" />
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <include
-                    android:id="@+id/child_extra"
-                    bind:extraModel="@={sellRentModel}"
+                    android:id="@+id/child_base"
                     bind:editable="@={editable}"
-                    android:layout_height="wrap_content"
+                    bind:citySellRent="@={citySellRent}"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    layout="@layout/child_base"
                     android:layout_width="match_parent"
-                    layout="@layout/child_extra"/>
-
+                    android:layout_height="wrap_content"/>
                 <include
-                    android:id="@+id/child_land_situation"
-                    bind:sellRentModel="@={sellRentModel}"
+                    android:id="@+id/child_sr_land_situation"
                     bind:editable="@={editable}"
-                    android:layout_height="wrap_content"
+                    bind:citySellRent="@={citySellRent}"
+                    bind:model="@={model}"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    layout="@layout/child_sr_land_situation"
                     android:layout_width="match_parent"
-                    layout="@layout/child_land_situation"/>
-
+                    android:layout_height="wrap_content"/>
                 <include
-                    android:id="@+id/child_building_situation"
+                    android:id="@+id/child_sr_building_situation"
                     bind:editable="@={editable}"
-                    bind:sellRentModel="@={sellRentModel}"
+                    bind:citySellRent="@={citySellRent}"
+                    bind:model="@={model}"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    layout="@layout/child_sr_building_situation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    layout="@layout/child_building_situation"/>
-
+                    android:layout_height="wrap_content"/>
                 <include
-                    android:id="@+id/child_rent"
-                    bind:rentModel="@={sellRentModel.rentInfo2Model}"
+                    android:id="@+id/child_sr_rent_situation"
                     bind:editable="@={editable}"
-                    android:layout_height="match_parent"
+                    bind:model="@={model}"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    layout="@layout/child_sr_rent_situation"
                     android:layout_width="match_parent"
-                    layout="@layout/child_rent_2"/>
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
+
         </android.support.v4.widget.NestedScrollView>
-
-
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 
 </layout>
+
