--- a/app/src/main/res/layout/activity_house_rent.xml
+++ b/app/src/main/res/layout/activity_house_rent.xml
@@ -6,11 +6,9 @@
     <data>
 
         <import type="android.view.View" />
-
         <variable
             name="citySellRent"
             type="org.chengjian.java.feidian.collectdata.beans.CitySellRent" />
-
         <variable
             name="model"
             type="org.chengjian.java.feidian.collectdata.beans.HouseRentModel" />
@@ -92,7 +90,6 @@
                     android:id="@+id/child_hr_land_situation"
                     bind:editable="@={editable}"
                     bind:citySellRent="@={citySellRent}"
-                    bind:model="@={model}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -102,7 +99,7 @@
                     android:layout_height="wrap_content"/>
                 <include
                     android:id="@+id/child_hr_building_situation"
-                    bind:editable="@={editable}"
+                    bind:editable="@{editable}"
                     bind:citySellRent="@={citySellRent}"
                     bind:model="@={model}"
                     android:layout_marginTop="16dp"
@@ -114,7 +111,7 @@
                     android:layout_height="wrap_content"/>
                 <include
                     android:id="@+id/child_hr_rent_situation"
-                    bind:editable="@={editable}"
+                    bind:editable="@{editable}"
                     bind:model="@={model}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
