--- a/app/src/main/res/layout/activity_shop_rent.xml
+++ b/app/src/main/res/layout/activity_shop_rent.xml
@@ -32,7 +32,7 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:title="房屋出租租金调查表"
+            app:title="柜台(商铺)出租租金调查表"
             app:titleTextColor="@color/colorTitle">
 
             <LinearLayout
@@ -92,7 +92,6 @@
                     android:id="@+id/child_sr_land_situation"
                     bind:editable="@={editable}"
                     bind:citySellRent="@={citySellRent}"
-                    bind:model="@={model}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
