--- a/app/src/main/res/layout/child_chs_land_situation.xml
+++ b/app/src/main/res/layout/child_chs_land_situation.xml
@@ -120,6 +120,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:hint="宗地长度"
+                                android:enabled='@{editable}'
                                 android:id="@+id/et_land_length"
                                 android:layout_width="match_parent"
                                 android:text='@={citySellRent.landLength}'
@@ -133,6 +134,7 @@
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
                                 android:hint="宗地宽度"
+                                android:enabled='@{editable}'
                                 android:text='@={citySellRent.landWidth}'
                                 android:id="@+id/et_land_width"
                                 android:layout_width="match_parent"
@@ -201,6 +203,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
+                                android:enabled='@{editable}'
                                 android:text='@={""+citySellRent.distToCornor}'
                                 android:id="@+id/et_dist_to_cornor"
                                 android:layout_width="match_parent"
@@ -212,6 +215,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
+                                android:enabled='@{editable}'
                                 android:text='@={"" + citySellRent.buildingPlotRate}'
                                 android:id="@+id/et_building_plot_rate"
                                 android:layout_width="match_parent"
@@ -230,6 +234,7 @@
                             android:hint="临街宽度(m)"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
+                                android:enabled='@{editable}'
                                 android:text='@{"" + citySellRent.widthToStreet}'
                                 android:id="@+id/et_width_to_street"
                                 android:layout_width="match_parent"
@@ -241,6 +246,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
                             <android.support.design.widget.TextInputEditText
+                                android:enabled='@{editable}'
                                 android:text='@{"" + citySellRent.depthToStreet}'
                                 android:id="@+id/et_depth_to_street"
                                 android:layout_width="match_parent"
