--- a/app/src/main/res/layout/child_hr_rent_situation.xml
+++ b/app/src/main/res/layout/child_hr_rent_situation.xml
@@ -115,7 +115,7 @@
                      android:layout_height="wrap_content">
                      <android.support.design.widget.TextInputEditText
                          android:enabled='@{editable}'
-                         android:text='@={model.houseNomalTotalFee}'
+                         android:text='@={model.houseNormalTotalFee}'
                          android:id="@+id/et_house_normal_total_fee"
                          android:inputType="number"
                          android:layout_width="match_parent"
