--- a/app/src/main/res/layout/child_hs_land_situation.xml
+++ b/app/src/main/res/layout/child_hs_land_situation.xml
@@ -90,6 +90,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <fr.ganfra.materialspinner.MaterialSpinner
+                            android:clickable="false"
                             android:layout_marginEnd="4dp"
                             android:layout_weight="1"
                             app:ms_hintTextSize="18sp"
